gccida/g2/validate_change
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/validate_change/src/recog.c:671:1: error: unknown type name 'change_t_0'; did you mean 'change_t'?
change_t_0 *v11; // rdi 
^~~~~~~~~~
change_t
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/validate_change/src/recog.c:178:3: note: 'change_t' declared here
} change_t;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/validate_change/src/recog.c:674:1: error: unknown type name 'change_t_0'; did you mean 'change_t'?
change_t_0 *v14; // rax 
^~~~~~~~~~
change_t
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/validate_change/src/recog.c:178:3: note: 'change_t' declared here
} change_t;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/validate_change/src/recog.c:675:1: error: unknown type name 'change_t_0'; did you mean 'change_t'?
change_t_0 *v15; // rdi 
^~~~~~~~~~
change_t
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/validate_change/src/recog.c:178:3: note: 'change_t' declared here
} change_t;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/validate_change/src/recog.c:699:21: error: expected expression
v14 = ( change_t_0 *)xrealloc( changes, v13); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/validate_change/src/recog.c:699:9: error: use of undeclared identifier 'change_t_0'
v14 = ( change_t_0 *)xrealloc( changes, v13); 
        ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/validate_change/src/obj/recog.o] Error 1
